--- a/style.css
+++ b/style.css
@@ -5,23 +5,47 @@ h1 {
 }
 form {
     margin-left: 30px;
-
 }
-
 .col-md-12 about1 {
     margin-top: 30px;
     padding: 50px;
     font-size: 25px;
 
 }
+.navbar-expand-lg{
+border-bottom:2px solid #D3D3D3;
+}
+#navbar{
+    /* background-color:#B8860B; */
+}
+.navlink, .mainnavtxt{
+    color:black;
+}
+#navlink1{
+    align-content: right;
+}
+#about1{
+    text-align: left;
+}
+#title{
+    padding-left: 15px;
+    border-left: 10px;
+    margin-left:0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+#pimg{
+    margin-top:0;
+}
+#profimg{
+    /* display:block; */
+    align-self: center;
+    margin-top: 0px;
+}
 
-/* .col-lg-3 port-pic {
-background-color: aqua;
-border: solid;
-border-width: 4px;
-margin: 30px;
-} */
+#proftext{
+    align-content: center;
+}
 
-/* .col-lg-3 {
-margin-top: 20px;
-} */
