--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -174,7 +174,7 @@ span{
     /* border-bottom:2px solid #D3D3D3; */
 }
 #navbar{
-    /* background-color:#505050; */
+    background-color:white;
     height: 75px;
     /* border-bottom: solid #40E0D0 7px; */
     /* font-weight: 200; */
@@ -204,6 +204,15 @@ span{
 
 #nav_links{
     padding-right: 75px;
+}
+#navbarSupportedContent{
+    float: right;
+}
+
+.navbar-toggler{
+    border-top:solid, 1px, gray;
+    /* background-color: gray; */
+    color: gray;
 }
 
 
