--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -18,9 +18,9 @@ form {
     font-size: 25px;
 }
 span{
-    background-color: #acd5cd;
+    /* background-color: #acd5cd; */
 }
-.title , #sub-title{
+.title{
     /* padding-top:50px; */
     /* padding-bottom:100px; */
     /* position: absolute; */
@@ -30,14 +30,15 @@ span{
     color: white;
     font-family: monospace;
     font-size: 25px;
-    margin-top: 200px;
-    margin-left: 15px;
+    margin-top: 150px;
+    margin-left: 25px;
     margin-right: 27px;
+    padding-right: 10px;
     overflow: hidden;
     white-space: nowrap;
 }
 @media only screen and (min-width: 960px){
-    .title, #sub-title{
+    .title{
     /* padding-top:50px; */
     /* padding-bottom:100px; */
     /* position: absolute; */
@@ -46,16 +47,16 @@ span{
     text-align: right;
     color: white;
     font-family: monospace;
-    font-size: 20px;
-    margin-top: 200px;
-    margin-left: 30px;
-    margin-right: 75px;
+    font-size: 30px;
+    margin-top: 100px;
+    margin-left: 10px;
+    margin-right: 100px;
     overflow: hidden;
     white-space: nowrap;
     }
 }
-@media only screen and (min-width: 760px){
-    .title, #sub-title{
+@media only screen and (min-width: 900px){
+    .title{
     /* padding-top:50px; */
     /* padding-bottom:100px; */
     /* position: absolute; */
@@ -64,9 +65,10 @@ span{
     text-align: right;
     color: white;
     font-family: monospace;
-    font-size: 25px;
-    margin-top: 200px;
-    margin-left: 30px;
+    font-size: 35px;
+    margin-top: 180px;
+    margin-left: 5px;
+    margin-right: 30px;
     overflow: hidden;
     white-space: nowrap;
     }
@@ -81,32 +83,48 @@ span{
     font-family: monospace;
     font-size: 80px;
 }
+#chat-text{
+    margin-top: 40px;
+    font-size: 20px;
+    font-weight: 200;
+    margin-bottom: 0px;
+}
+.contactinfo{
+    padding-left:30px;
+    padding-right:30px;
+
+}
 
 .jumbotron{
     text-align: center;
     /* background: url(https://i.imgur.com/wQ5Yl6z.jpg); */
-    /* background: url(https://i.imgur.com/cjJqn2f.jpg); */
-    background: url(https://i.imgur.com/DXpaIyk.jpg);
-    height: 600px;
+    background: url(https://i.imgur.com/cjJqn2f.jpg);
+    /* background: url(https://i.imgur.com/DXpaIyk.jpg); */
+    height: 700px;
     background-size: cover;
     background-position: center center;
     margin-bottom: 0px;
+    color: white;
     /* margin-bottom: 100px; */
 }
+
 @media only screen and (min-width: 520px){
    .jumbotron {
     text-align: center;
     /* background: url(https://i.imgur.com/wQ5Yl6z.jpg); */
-    /* background: url(https://i.imgur.com/cjJqn2f.jpg); */
-    background: url(https://i.imgur.com/DXpaIyk.jpg);
+    background: url(https://i.imgur.com/cjJqn2f.jpg);
+    /* background: url(https://i.imgur.com/DXpaIyk.jpg); */
     height: 600px;
     background-size: cover;
     background-position: center center;
     margin-bottom: 0px;
+    color: white;
     /* margin-bottom: 100px; */
     } 
 }
-
+#portfolio_div{
+    background: url(https://i.imgur.com/cjJqn2f.jpg);  
+}
 
 /* #welcome{
     padding-bottom: 100px;
@@ -118,22 +136,28 @@ span{
     /* font-size: 35px; */
 }
 #about-2{
-    padding-top: 40px;
+    padding-top: 65px;
     /* background-color: #40E0D0; */
     /* height: 400px; */
     text-align: center;
     /* border-bottom: solid 2px; */
     margin-bottom: 200px;
 }
+#about-2-2{
+    margin-top: 30px;
+}
+
 #about-3{
-    border-top: solid 1px #0ea9bd;
+    border-top: solid 1px #0d1a48;
+    background: #0d1a48;
 }
 #subt1{
     font-weight: 200;
     font-size: 35px;
-    padding-top:40px;
-    padding-left: 50px;
+    padding-top:60px;
+    /* padding-left: 50px; */
     color: gray;
+    align-self: center;
     /* font-weight: 200; */
 }
 #subt2{
@@ -149,13 +173,24 @@ span{
     font-size: 15px;
     padding-top:0px;
     padding-left: 50px;
-    color: #505050;
+    color: gray;
     font-weight: 300;
+}
+#ttl-col{
+
 }
 #about-4{
     background-color: #505050;
     height: 100px;
+    font-weight: 200;
+    align-content: center;
+    justify-content: center;
 }
+
+#connect-footer, #connect-footer-port{
+    color: white;
+}
+
 #contact-1{
     margin-bottom: 40px;
 }
@@ -163,6 +198,7 @@ span{
     background-color: #505050;
     height: 100px;
 }
+
 #about-text{
     padding-top:80px;
     padding-bottom: 50px;
@@ -235,21 +271,76 @@ span{
     text-align: left;
 }
 
+#port_t{
+    display: flex;
+}
+
+#portfolio_title {
+    align-self: left;
+}
 /* Portfolio */
 #portfolio_title{
     font-weight: 200;
-    padding-top: 150px;
-    /* font-family: Arial, Helvetica, sans-serif; */
+    padding-top: 250px;
+    font-family: monospace;
     font-size: 45px;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
     text-align: center;
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
-    color:#505050;
-    
+    color:white;
+}
+#traits{
+    display: flex;
+}
+
+#traits span{
+    bottom: 0;
+    right: 0;
+    font-family: monospace;
+    align-self: flex-end;
+    vertical-align: bottom;
+}
+#timelender{
+    height: 440px;
+}
+.cardtimelender, .cardtimelender2{
+    height: 440px;
+}
+#p1tt, #p2tt, #p3tt, #p4tt, #portfolio_title span{
+    background-color:#0d1a48;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    border-bottom:10px;
+
+    /* padding-left: 10px; */
     
 }
+#p3tt, #p4tt{
+    padding-left: 10px;
+    margin-bottom: 20px;
+}
+#p2tt{
+    font-size: 15px;
+}
+#traits-text{
+    font-size: 20px;
+    text-align: left;
+    margin-left: 30px;
+    padding-top: 250px;
+}
+.port-special{
+    padding-left:30px;
+    display: flex;
+    justify-content: center;
+}
+.port-special2{
+    padding-left:30px;
+    display: flex;
+    justify-content: left;
+}
+
 #pimg{
     margin-top:0;
 }
@@ -262,7 +353,7 @@ span{
     align-content: center;
 }
 #portfoliorow-4{
-    background-color: #505050;
+    background-color: #0d1a48;
     height: 100px;
 }
 .games1{
@@ -293,27 +384,34 @@ span{
     align-items: center;
     align-self: center;
 }
+#portfolioRow0-5{
+    padding-top:70px;
+    text-align: center;
+    color: #0d1a48;
+}
 #portfolioRow1, 
 #portfolioRow2,
 #portfolioRow3
 {
     text-align: center;
-    color: black;
+    color: #0d1a48;
 }
 #portfolioRow1, 
 #portfolioRow3
 {
-    background-color:#505050;
-    border-bottom: solid 25px #0ea9bd;
+    /* background-color:#0d1a48; */
+    /* border-bottom: solid 25px background: url(); */
 }
 #portfolioRow2
 {
+    background-color:#0d1a48; 
+    color: white;
     border-bottom: solid 25px #0ea9bd;
     padding-bottom:150px;
 }
 #portfolioRow4
 {
-    background-color:#0ea9bd; 
+    background-color:#0d1a48; 
     padding-top:150px;
     padding-bottom: 200px;
 }
@@ -327,23 +425,23 @@ span{
     font-size: 50px;
 }
 #heading1, #heading3{
-    color:whitesmoke;
+    color:#0d1a48;
 }
 #heading2{
-    color: #505050;
+    color: white;
 }
 #heading4{
     padding:20px;
     padding-top:40px;
     font-size: 50px;
-    color: #505050;
+    color: white;
     font-weight: 300;
 }
 .sub-heading1{
     padding-top:20px;
     padding-bottom: 30px;
     margin-bottom: 50px;
-    color: #D0D0D0;
+    color: #0d1a48;
     font-size: 30px;
     font-weight: 200;
 }
@@ -351,15 +449,49 @@ span{
     padding-top:20px;
     padding-bottom: 30px;
     margin-bottom: 40px;
-    color: #505050;
+    color: #0d1a48;
     font-size: 30px;
     font-weight: 200;
+}
+.contactinfo2{
+    padding-top:20px;
+    padding-bottom: 30px;
+    margin-bottom: 40px;
+    color: #0d1a48;
+    font-size: 30px;
+    font-weight: 200;
+    /* overflow: hidden; */
+    /* white-space: nowrap; */
+}
+@media only screen and (max-width:740px){
+    .contactinfo2{
+        padding-top:20px;
+        padding-bottom: 30px;
+        margin-bottom: 40px;
+        color: #0d1a48;
+        font-size: 25px;
+        font-weight: 200;
+        /* overflow: hidden; */
+        /* white-space: nowrap; */
+    }
+}
+@media only screen and (max-width:460px){
+    .contactinfo2{
+        padding-top:20px;
+        padding-bottom: 30px;
+        margin-bottom: 40px;
+        color: #0d1a48;
+        font-size: 20px;
+        font-weight: 200;
+        /* overflow: hidden; */
+        /* white-space: nowrap; */
+    }
 }
 .sub-heading3{
     padding-top:20px;
     padding-bottom: 30px;
     margin-bottom: 20px;
-    color:#505050;
+    color:white;
     font-size: 25px;
     font-weight: 200;
 }
@@ -371,14 +503,16 @@ span{
     align-content: center;
 }
 #titlecol{
-    text-align: center;
+    display: flex;
+    justify-content: left;
+    align-items: flex-end;
 }
 .port_item_react{
     padding-top:30px;
-    padding-bottom: 5px;
+    padding-bottom: 0px;
     padding-right:3px;
     padding-left:3px;
-    color:whitesmoke;
+    color:#0d1a48;
     font-weight: 400;
     font-size: 23px;
 }
@@ -387,7 +521,7 @@ span{
     padding-bottom: 0px;
     padding-right:3px;
     padding-left:3px;
-    color:#505050;
+    color:#0d1a48;
     font-weight: 250;
     font-size: 23px;
 }
@@ -398,7 +532,7 @@ span{
     padding-right:3px;
     padding-left:3px;
     font-weight: 500;
-    color:white;
+    color:#0d1a48;
     font-size: 20px;
 }
 /* .port_item3{
@@ -411,7 +545,7 @@ span{
 .item_text_react{
     align-self: center;
     font-size: 20px;
-    color: whitesmoke;
+    color: #0d1a48;
     font-weight: 200;
     padding-left: 20px;
     padding-right: 20px;
@@ -421,7 +555,7 @@ span{
 .item_text1{
     align-self: center;
     font-size: 20px;
-    color: #505050;
+    color: white;
     font-weight: 200;
     padding-left: 20px;
     padding-right: 20px;
@@ -432,7 +566,7 @@ span{
 .sub_item_react{
     align-self: center;
     font-size: 17px;
-    color: white;
+    color: #0d1a48;
     font-weight: 300;
     padding-left: 20px;
     padding-right: 20px;
@@ -443,7 +577,7 @@ span{
 .sub_item_text1{
     align-self: center;
     font-size: 17px;
-    color: #505050;
+    color: #0d1a48;
     font-weight: 300;
     padding-left: 20px;
     padding-right: 20px;
@@ -457,6 +591,12 @@ span{
     padding-left:10px;
     align-content: center;
 }
+#newsblog-img{
+    border: solid 1px #0d1a48;
+}
+#burger-track{
+    border: solid 1px burlywood;
+}
 .item_text2{
     font-size: 17px;
     align-self: center;
@@ -466,21 +606,44 @@ span{
     margin-bottom: 70px;
     padding-left: 20px; 
     padding-right:20px;
-    color: white;
+    color: #0d1a48;
 }
+.card{
+    border: solid 1px white;
+    /* border-radius: 25px; */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+.card:hover {
+    box-shadow: 0 50px 50px 0 rgba(0,0,0,0.2);
+  }
+.smallproj{
+    height:400px;
+}
+.smallproj{
+    box-shadow: 0 16px 25px 0 rgba(0,0,0,0.2);
+}
+.port-pic{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
 .port_pic1{
     text-align: center;
     align-items: center;
     padding-top: 0px;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     color: whitesmoke;
     
+}
+.pic_row{
+    /* padding-left: 50px; */
 }
 .port_pic2{
     text-align: center;
     align-items: center;
     padding-top: 0px;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     color: #909090;
     
     
@@ -489,12 +652,25 @@ span{
     width: 200px;
     align-content: center;
 }
+.port-pic2-2{
+    padding-top:30px;
+    padding-left:20px;
+    padding-right: 20px;
+    
+}
+
 #hungry{
     border:1px solid #ffa500;
     
 }
+#clickme-pic{
+    border:1px solid darkgray;
+}
 #trains{
     border:1px solid cornflowerblue;
+}
+#liri-iframe{
+    padding-top:50px;
 }
 
 .games1
