--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -17,6 +17,9 @@ form {
     padding: 50px;
     font-size: 25px;
 }
+#nav-name{
+    color: #9fe5ff;
+}
 span{
     /* background-color: #acd5cd; */
 }
